сделал рефакторинг